syntax = "proto3";

package protos;

enum RPCType {
  Sys = 0;
  User = 1;
}

enum MsgType {
  MsgRequest = 0;
  MsgNotify = 1;
  MsgResponse = 2;
  MsgPush = 3;
}

message Push {
  string Route = 1;
  string Uid = 2;
  bytes Data = 3;
}

message Session {
  int64 ID = 1;
  string Uid = 2;
  bytes Data = 3;
}

message Msg {
  uint64 ID = 1;
  string Route = 2;
  bytes Data = 3;
  string Reply = 4;
  MsgType Type = 5;
}

message Request {
  RPCType Type = 1;
  Session Session = 2;
  Msg Msg = 3;
  string FrontendID = 4;
  bytes Metadata = 5;
}

message Response {
  bytes data = 1;
  Error error = 2;
}

message Error {
  string code = 1;
  string msg = 2;
  map<string, string> metadata = 3;
}

message KickMsg {
  string userId = 1;
}

message KickAnswer {
  bool kicked = 1;
}

message BindMsg {
  string uid = 1;
  string fid = 2;
}
